Slider display issues/resize on mobile screen

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1{
 }
 
 h1+p{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 ul{
@@ -124,8 +124,10 @@ nav{
 
 
 img{
-	max-width: 100%;
-    height: 400px;
+    max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
 }
 
 
